# DuoDetect

./: README.md  gitignore  helper.py  main.py  pyproject.toml  requirements.txt
notebooks/: bow.ipynb  cv.pkl  eda.ipynb  preprocessed_bow.ipynb
